--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,21 +3,21 @@ $white: #ffffff;
 $header-height: 55px;
 
 $sb-font: 'Noto Sans', sans-serif;
-$primary-blue: #314860;
+$primary-sb: #314860;
 
 //sidebar
 $sb-width: 230px;
 $sb-font-color: darken($white, 25%);
-$sb-highlight-item: lighten($primary-blue, 15%);
-$sb-bg-submenu: darken($primary-blue, 5%);
+$sb-highlight-item: lighten($primary-sb, 15%);
+$sb-bg-submenu: darken($primary-sb, 5%);
 
 $sb-highlight-font-color: #1ab491;
+
+
+@import 'sidebar';
+@import 'navbar';
+@import '~bootstrap/scss/bootstrap';
 
 body {
 	background-color: $main-bg;
 }
-
-@import 'sidebar';
-@import 'navbar';
-
-@import '~bootstrap/scss/bootstrap';
