user login, form input, slider on sidebar, init cards

--- a/src/styles/sidebar.scss
+++ b/src/styles/sidebar.scss
@@ -77,10 +77,12 @@
 	}
 
 	.active {
-		background-color: $sb-highlight-item;
 		color: $sb-highlight-font-color !important;
 	}
 
+	.toplevel-item.active {
+		background-color: $sb-highlight-item;
+	}
 }
 
 .noselect {
