--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -11,13 +11,26 @@ $sb-font-color: darken($white, 25%);
 $sb-highlight-item: lighten($primary-sb, 15%);
 $sb-bg-submenu: darken($primary-sb, 5%);
 
-$sb-highlight-font-color: #1ab491;
+//$sb-highlight-font-color: #1ab491;
+//$sb-highlight-font-color: rgb(252, 85, 114);
+$sb-highlight-font-color: $white;
+
+$border-radius-card: 2px;
 
 
 @import 'sidebar';
 @import 'navbar';
+@import 'login';
 @import '~bootstrap/scss/bootstrap';
 
 body {
 	background-color: $main-bg;
+}
+
+.card {
+	border-radius: $border-radius-card !important;
+
+	.card-header, .card-footer {
+		background-color: $white;
+	}
 }
