--- a/src/styles/sidebar.scss
+++ b/src/styles/sidebar.scss
@@ -35,7 +35,12 @@
 		h3 {
 			display: table-cell;
 			vertical-align: middle;
-			padding-left: 15px;
+
+			font-size: 23px;
+			font-weight: 300;
+			letter-spacing: 3px;
+			text-transform: uppercase;
+			text-align: center;
 		}
 	}
 
