--- a/src/styles/sidebar.scss
+++ b/src/styles/sidebar.scss
@@ -28,7 +28,7 @@
 		color: $white;
 		background-color: $sb-highlight-item;
 		width: $sb-width;
-		height: 55px;
+		height: $header-height;
 		display: table;
 		box-shadow: 0 4px 2px -2px rgba(0,0,0,0.1);
 
