added breadcrump in navbar

--- a/src/styles/navbar.scss
+++ b/src/styles/navbar.scss
@@ -1,4 +1,4 @@
-.nav .btn {
+.navbar .btn {
 	border-radius: 2px;
 	border-width: 0;
 }
@@ -6,4 +6,21 @@
 .navbar {
 	box-shadow: 0 3px 2px -2px rgba(0,0,0,0.1);
 	height: $header-height;
+
+	.breadcrumb {
+		margin-top: 15px;
+		background-color: $gray-100;
+		font-size: 90%;
+
+		li:last-child a {
+			color: $gray-700;
+			text-decoration: none;
+			cursor: default;
+		}
+
+		li:first-child a {
+			color: $gray-700;
+		}
+	}
 }
+
