added docker, added start socket

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -85,4 +85,5 @@ input, textarea, select {
 @import 'sidebar';
 @import 'navbar';
 @import 'login';
-@import 'configuration'
+@import 'configuration';
+@import 'console';
