--- a/src/styles/console.scss
+++ b/src/styles/console.scss
@@ -6,12 +6,18 @@
 		font-family: "Consolas", "Andale Mono", "Courier New", "Courier", monospace;
 		background-color: rgb(36, 39, 46);
 		color: #f7f7f7;
+		height: 350px;
 	}
 
 	ul {
 		list-style-type: none;
 		margin: 0;
-		padding: 0;
+		padding: 15px;
 		max-height: 350px;
+		position: absolute;
+		top: 49px;
+		left: 0;
+		width: 100%;
+		height: 350px;
 	}
 }
