implement a proper list input box (finally)

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -64,7 +64,7 @@ select {
 	border-radius: $border-radius !important;
 }
 
-input, textarea, select {
+.react-tagsinput, input, textarea, select {
 	border-radius: $border-radius !important;
 }
 
